WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20548
[CAIRO] Canvas composite don't work on canvas-elements.
https://bugs.webkit.org/show_bug.cgi?id=20548
Summary
[CAIRO] Canvas composite don't work on canvas-elements.
Dirk Schulze
Reported
2008-08-27 12:02:32 PDT
You can't apply a composite-effect on a canvas-element but works for html-elements.
Attachments
Canvas composite on Cairo
(1.47 KB, patch)
2008-08-27 12:11 PDT
,
Dirk Schulze
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dirk Schulze
Comment 1
2008-08-27 12:11:32 PDT
Created
attachment 23035
[details]
Canvas composite on Cairo I used the c->drawImage() call with composite like in CanvasRenderingContext2D::drawImage(HTMLImageElement* image ...).
Eric Seidel (no email)
Comment 2
2008-08-27 15:43:57 PDT
Comment on
attachment 23035
[details]
Canvas composite on Cairo We need to test this on CG and see what the effect is.
Eric Seidel (no email)
Comment 3
2008-08-27 17:24:58 PDT
Comment on
attachment 23035
[details]
Canvas composite on Cairo Looks good. Works for CG too.
Eric Seidel (no email)
Comment 4
2008-08-27 17:31:30 PDT
r35955
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug