        Reviewed by eseidel.

Fix canvas drawImage to support composite operations.
        Composite had no effect on canvas elements like these:
        http://philip.html5.org/tests/canvas/suite/tests/index.2d.composite.canvas.html

        [CAIRO] Canvas composite don't work on canvas-elements.
        https://bugs.webkit.org/show_bug.cgi?id=20548

        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::drawImage): pass the current composite operator to the drawImage call


Canonical link: https://commits.webkit.org/28358@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35955 268f45cc-cd09-0410-ab3c-d52691b4dbfc